[package]
name = "heme_meat"
version = "0.1.0"
authors = ["Sachi King <nakato@nakato.io>"]

[dependencies]
dotenv = "0.9.0"
clippy = {version = "*", optional = true}
diesel = { version = "0.14.0", features = ["sqlite"] }
diesel_codegen = { version = "0.14.0", features = ["sqlite"] }
lazy_static = "*"
r2d2 = "0.7.2"
r2d2-diesel = "0.14.0"
rocket = "0.3.0"
rocket_codegen = "0.3.0"
rocket_contrib = "0.3.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
