[package]
name = "heme_meat"
version = "0.1.0"
authors = ["Sachi King <nakato@nakato.io>"]

[dependencies]
dotenv = "0.9.0"
clippy = {version = "*", optional = true}
diesel = { version = "1.0", features = ["sqlite"] }
diesel_infer_schema = { version = "1.0", features = ["sqlite"] }
lazy_static = "*"
r2d2 = "0.8.2"
r2d2-diesel = "1.0"
rocket = "0.3"
rocket_codegen = "0.3"
rocket_contrib = "0.3"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
